<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/cabaio"
    android:layout_height="match_parent"
    tools:context=".menupizza">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="69dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="16dp"
        android:text="@string/descrippizza2"
        android:textColor="#0E0D0D"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonpizza2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textviewpizza4"
        app:layout_constraintTop_toBottomOf="@+id/buttonpizza1"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="220dp"
        android:layout_height="69dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="13dp"
        android:text="@string/descrippizza1"
        android:textColor="#0E0D0D"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonpizza1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textviewpizza3"
        app:layout_constraintTop_toBottomOf="@+id/textviewpizza2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textviewpizza2"
        android:layout_width="374dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textviewpizza2"
        android:textColor="#121111"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewpizza1"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonpizza1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="239dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFBD5332"
        android:onClick="Actpastor"
        android:text="@string/buttonpizza1"
        app:iconTint="#9A2B2B"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewpizza2" />

    <TextView
        android:id="@+id/textviewpizza4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="216dp"
        android:text="@string/textviewpizza4"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonpizza3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewpizza3" />

    <Button
        android:id="@+id/buttonpizza2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="242dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="102dp"
        android:backgroundTint="#BD5332"
        android:onClick="Actpeperoni"
        android:text="@string/buttonpizza2"
        app:layout_constraintBottom_toTopOf="@+id/buttonpizza3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpizza1" />

    <TextView
        android:id="@+id/textviewpizza1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="6dp"
        android:text="@string/textviewpizza1"
        android:textColor="#121111"
        app:layout_constraintBottom_toTopOf="@+id/textviewpizza2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonpizza3"
        android:layout_width="183dp"
        android:layout_height="94dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#FFBD5332"
        android:onClick="Actmenupizzafinalizar"
        android:text="@string/buttonpizza3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpizza2" />

    <TextView
        android:id="@+id/textviewpizza3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="195dp"
        android:text="@string/textviewpizza3"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textviewpizza4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewpizza2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="176dp"
        android:layout_height="116dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="62dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonpizza3"
        app:layout_constraintEnd_toStartOf="@+id/buttonpizza2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/peperamin" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="147dp"
        android:layout_height="132dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/textviewpizza4"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewpizza3"
        app:srcCompat="@drawable/postorr" />

    <Spinner
        android:id="@+id/spinnerpizza1"
        android:layout_width="86dp"
        android:layout_height="62dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/buttonpizza1"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinnerpizza2"
        android:layout_width="80dp"
        android:layout_height="58dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="163dp"
        android:background="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/buttonpizza2"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>